--- a/config.default.json
+++ b/config.default.json
@@ -1,3 +1,10 @@
 {
-	"isProduction": false
+	"isProduction": false,
+	"mysql": {
+		"host": "127.0.0.1",
+		"port": 3306,
+		"user": "root",
+		"password": "",
+		"database": "nifi-api"
+	}
 }
