--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/jest": "^26.0.22",
     "eslint-config-rg": "^1.0.12",
     "jest": "^26.6.3",
+    "mysql": "^2.18.1",
     "rg": "^1.5.22",
     "source-map-support": "^0.5.19",
     "ts-jest": "^26.5.4",
+    "typeorm": "^0.2.32",
     "typescript": "^4.2.3"
   },
   "scripts": {
