--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mysql": "^2.18.1",
     "rg": "^1.5.22",
     "source-map-support": "^0.5.19",
+    "sqlite3": "^5.0.2",
     "ts-jest": "^26.5.4",
     "typeorm": "^0.2.32",
     "typescript": "^4.2.3"
