Добавлена реализация RPC-Сервера

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jest": "^26.6.3",
     "mysql": "^2.18.1",
     "rg": "^1.5.22",
+    "rg-web": "^1.0.13",
     "source-map-support": "^0.5.19",
     "sqlite3": "^5.0.2",
     "ts-jest": "^26.5.4",
