--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "dist/index.js",
   "dependencies": {
+    "@ton-client-ts/node": "^1.3.0",
     "@types/jest": "^26.0.22",
     "eslint-config-rg": "^1.0.12",
     "jest": "^26.6.3",
