--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "dist/index.js",
   "dependencies": {
-    "@ton-client-ts/node": "^1.3.0",
+    "@tonclient/core": "^1.14.2",
+    "@tonclient/lib-node": "^1.14.2",
     "@types/jest": "^26.0.22",
     "eslint-config-rg": "^1.0.12",
     "jest": "^26.6.3",
