--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,9 @@
-node_modules
+logs/
+node_modules/node_modules
 package-lock.json
 dist
 src/node_modules
 logs
 ./lib/
 ormconfig.json
-last_message_time
-last_token_id
+node_modules/
