--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,149 @@
 {
 	"root": true,
+	"env": {
+		"es6": true,
+		"node": true
+	},
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": 2020,
+		"sourceType": "module",
+		"project": "./tsconfig.json"
+	},
+	"plugins": [
+		"@typescript-eslint"
+	],
 	"extends": [
-		"eslint-config-rg"
+		"eslint:recommended",
+		"plugin:@typescript-eslint/eslint-recommended",
+		"plugin:@typescript-eslint/recommended"
 	],
 	"rules": {
-		"@typescript-eslint/no-require-imports": "error"
+		"max-len": ["error", 120],
+		"@typescript-eslint/explicit-function-return-type": [
+			"error",
+			{
+				"allowExpressions": true,
+				"allowTypedFunctionExpressions": true,
+				"allowHigherOrderFunctions": true,
+				"allowConciseArrowFunctionExpressionsStartingWithVoid": true
+			}
+		],
+		"@typescript-eslint/no-require-imports": "error",
+		"@typescript-eslint/no-non-null-assertion": "error",
+		"no-inner-declarations": "off",
+		"@typescript-eslint/no-explicit-any": "off",
+		"@typescript-eslint/no-var-requires": "off",
+		"@typescript-eslint/func-call-spacing": ["error"],
+		"@typescript-eslint/brace-style": ["error", "1tbs"],
+		"@typescript-eslint/keyword-spacing": "error",
+		"@typescript-eslint/no-extra-semi": "error",
+		"@typescript-eslint/no-invalid-void-type": "error",
+		"@typescript-eslint/prefer-for-of": "error",
+		"@typescript-eslint/prefer-includes": "error",
+		"@typescript-eslint/prefer-string-starts-ends-with": "error",
+		"@typescript-eslint/semi": ["error", "always"],
+		"@typescript-eslint/no-unused-vars": "off",
+		"@typescript-eslint/no-throw-literal": "error",
+		"@typescript-eslint/no-unnecessary-condition": ["error", {
+			"allowConstantLoopConditions": true
+		}],
+		"@typescript-eslint/switch-exhaustiveness-check": "error",
+		"@typescript-eslint/require-array-sort-compare": "error",
+		"@typescript-eslint/naming-convention": [
+			"error",
+			{
+				"selector": "variable",
+				"format": ["strictCamelCase", "UPPER_CASE"]
+			},
+			{
+				"selector": "parameter",
+				"format": ["strictCamelCase"]
+			},
+			/*{
+				"selector": "property",
+				"format": ["strictCamelCase"]
+			},*/
+			{
+				"selector": "function",
+				"format": ["strictCamelCase"]
+			},
+			{
+				"selector": "parameter",
+				"types": ["boolean"],
+				"format": ["strictCamelCase"]
+			},
+			{
+				"selector": "method",
+				"format": ["strictCamelCase"]
+			},
+			{
+				"selector": "typeLike",
+				"format": ["StrictPascalCase"]
+			},
+			{
+				"selector": "variable",
+				"types": ["boolean"],
+				"format": ["strictCamelCase"]
+			},
+			{
+				"selector": "enumMember",
+				"format": ["StrictPascalCase"]
+			},
+			{
+				"selector": "interface",
+				"prefix": ["I"],
+				"format": ["StrictPascalCase"]
+			},
+			{
+				"selector": "typeProperty",
+				"format": null
+			}
+		],
+		"@typescript-eslint/type-annotation-spacing": ["error", {
+			"before": true,
+			"after": true,
+
+			"overrides": {
+				"colon": {
+					"before": false
+				}
+			}
+		}],
+		"@typescript-eslint/space-before-function-paren": ["error", {
+			"anonymous": "never",
+			"named": "never",
+			"asyncArrow": "always"
+		}],
+		"@typescript-eslint/member-delimiter-style": ["error", {
+			"multiline": {
+				"delimiter": "semi",
+				"requireLast": true
+			},
+			"singleline": {
+				"delimiter": "semi",
+				"requireLast": true
+			}
+		}],
+		"lines-between-class-members": ["error", "always", {
+			"exceptAfterSingleLine": true
+		}],
+		"padded-blocks": ["error", "never"],
+		"curly": ["error", "multi-line"],
+		"no-lonely-if": "off",
+		"no-loss-of-precision": ["error"],
+		"no-constant-condition": ["error", {
+			"checkLoops": false
+		}],
+		"object-curly-spacing": ["error", "always"],
+		"indent": ["error", "tab", { "SwitchCase": 1 }],
+		"comma-spacing": ["error", {
+			"before": false,
+			"after": true
+		}],
+		"key-spacing": ["error", {
+			"beforeColon": false,
+			"afterColon": true
+		}]
 	}
 }
