--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "1.0.0",
   "description": "nifi-api",
   "repository": {
-    "url": "https://npm.realgrace.me"
+    "url": "https://github.com/kokkekpek/nifi-api"
   },
   "main": "dist/index.js",
   "dependencies": {
     "@tonclient/core": "^1.14.2",
     "@tonclient/lib-node": "^1.14.2",
     "@types/jest": "^26.0.22",
-    "eslint-config-rg": "^1.0.12",
+    "@types/node": "^15.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.25.0",
     "jest": "^26.6.3",
     "mysql": "^2.18.1",
-    "rg": "^1.5.22",
-    "rg-web": "^1.0.13",
     "source-map-support": "^0.5.19",
     "sqlite3": "^5.0.2",
     "ts-jest": "^26.5.4",
