--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 node_modules
 package-lock.json
+yarn.lock
 dist
 src/node_modules
 logs
 ./lib/
 ormconfig.json
-last_message_time
-last_token_id
+
 config.json
+config/config.json
+config/nginx/nginx.conf
+docker-compose.yml
