--- a/.eslintrc
+++ b/.eslintrc
@@ -43,7 +43,7 @@
 		"@typescript-eslint/prefer-includes": "error",
 		"@typescript-eslint/prefer-string-starts-ends-with": "error",
 		"@typescript-eslint/semi": ["error", "always"],
-		"@typescript-eslint/no-unused-vars": "off",
+		"@typescript-eslint/no-unused-vars": "warn",
 		"@typescript-eslint/no-throw-literal": "error",
 		"@typescript-eslint/no-unnecessary-condition": ["error", {
 			"allowConstantLoopConditions": true
