Update traefik rules

--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -9,10 +9,10 @@ services:
             - {cfg.nginx.log}:/var/log/nginx
         labels:
             - traefik.enable=true
-            - traefik.http.routers.nginx.rule=Host(`{cfg.nginx.domain}`)
-            #{!cfg.tls}- traefik.http.routers.nginx.entrypoints=web
-            #{cfg.tls}- traefik.http.routers.nginx.entrypoints=webSecure
-            #{cfg.tls}- traefik.http.routers.nginx.tls.certresolver=letsEncrypt
+            - traefik.http.routers.nifi-api-nginx.rule=Host(`{cfg.nginx.domain}`)
+            #{!cfg.tls}- traefik.http.routers.nifi-api-nginx.entrypoints=web
+            #{cfg.tls}- traefik.http.routers.nifi-api-nginx.entrypoints=webSecure
+            #{cfg.tls}- traefik.http.routers.nifi-api-nginx.tls.certresolver=letsEncrypt
         networks:
             - traefik
             - nifi-api
